--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Andrew Parks | Content Strategy / UX Design</title>
+  <title>Andrew Parks | Content Strategist</title>
 </head>
 
 <body>
