updated about page title

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Who Is Andrew Parks Anyway?</title>
+  <title>About Andrew Parks</title>
 </head>
 
 <body>
