--- a/moog.html
+++ b/moog.html
@@ -27,7 +27,30 @@
       <h1>Moog Music x self-titled</h1>
       </div>
       </div>
-      
+      <div>
+        <div>
+          <picture>
+            <source srcset="img/moog/moog-project@1.jpg" media="(max-width:767px)">
+              <img src="img/moog/moog-project@2.jpg" alt="moog project">
+              </picture>
+              </div>
+              </div>
+              <div>
+                <div>
+                  <h2><u>The Task At Hand</u></h2>
+                  <p>As part of a special electronic music package I spearheaded for <i><a
+                      href="https://self-titledmag.com" target="_blank">self-titled</a></i>, I oversaw an <a
+                          href="https://issuu.com/selftitled/docs/st_19_issuu/24" target="_blank">owned media campaign</a> featuring the major equipment brand Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).</p>
+                          </div>
+                          </div>
+                          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+                          <div>
+                            <div>
+                              <h2><u>The Results</u></h2>
+                              <p>The project's <a href="https://soundcloud.com/selftitledmag/sets/moog-x-self-titled" target="_blank">free digital EP</a> generated more than 70,000 streams on SoundCloud and raised customer awareness of the company's new <a href="https://www.moogmusic.com/products/sub-phatty" target="_blank">Sub Phatty synth</a> in the months leading up to a subsequent <a href="https://www.youtube.com/watch?v=8mbvDCDk3yU&feature=youtu.be" target="_blank">campaign</a> featuring Adult Swim and Flying Lotus.</p>
+                              <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/7173054&color=%23ced4df&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                              </div>
+                              </div>
   </main>
   <footer id="contact">
     <h2>Care to Collaborate?</h2>
