cleaned up project code

--- a/index.html
+++ b/index.html
@@ -46,16 +46,11 @@
           </div><!-- end first column -->
           <div>
             <!-- open second column (used for text) -->
-            <h3>Moog x self-titled</h3><!-- heading for the project -->
-            <p>
-              <!-- open paragraph -->
-              As part of a special electronic music package for self-titled, I oversaw a marketing campaign featuring Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).
-              The project's free digital EP generated more than 70,000 streams on SoundCloud and generated a great deal of excitement for the company's new Sub Phatty synth.
-            </p><!-- end paragraph -->
-            <a href="">Read more</a><!-- button or link label -->
+            <center>
+              <h2><a href="moog.html">Moog x self-titled</a></h2>
+            </center><!-- heading for the project -->
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
-
         <div>
           <!-- open row that holds (2) columns for project -->
           <div>
@@ -67,12 +62,9 @@
           </div><!-- end first column -->
           <div>
             <!-- open second column (used for text) -->
-            <h3>LineCook</h3><!-- heading for the project -->
-            <p>
-              <!-- open paragraph -->
-              LineCook is a mobile-ready web app I developed as part of CareerFoundry's UX design program. It was created to solve a simple problem: home cooks not knowing who to tap for trusted, realtime advice in the kitchen.
-            </p><!-- end paragraph -->
-            <a href="">Read more</a><!-- button or link label -->
+            <center>
+              <h2><a href="linecook.html">LineCook</a></h2>
+            </center><!-- heading for the project -->
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
       </div>
