cleaned up about page

--- a/about.html
+++ b/about.html
@@ -3,15 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Andrew Parks</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Andrew Parks | Content Strategist</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
   <header>
+<nav>
     <div>
-      <img src="https://via.placeholder.com/150x50/c7d9c9/000000?text=andrewparks.io" alt="Andrew Parks">
-      <nav>
+      <a href="index.html">
+        <img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
+      </a>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
@@ -21,19 +29,10 @@
     </div>
   </header>
   <main>
-    <div>
-      <div>
-        <h1>Who Is Andrew Parks Anyway?</h1>
-      </div>
-    </div>
-    <div>
-      <div>
-        <picture>
-          <source srcset="img/about/about@1.jpg" media="(max-width:767px)">
-          <img src="img/about/about@2.jpg" alt="about me">
-        </picture>
         <div>
           <div>
+    					<img src="https://bit.ly/3j3dECr" alt="bio photo">
+              <br>
             <h2>The 411</h2>
             <p>Over the past 18 years, I've worked for Apple, <i>Rolling Stone</i>, <i>Entertainment Weekly</i>, eMusic, and Songtrust; edited travel guides for Michelin and Fodor's; written liner notes for Pantera and Ghostly International; and
               produced owned media content for such major brands as Marriott International, Red Bull, Christie's, LVMH Moët Hennessy, Activision, Bandcamp, Visit California, and Explore Minnesota.</p>
@@ -84,10 +83,17 @@
     </div>
   </main>
   <footer id="contact">
-    <h2>Care to Collaborate?</h2>
     <p>
-      Please get in touch by contacting <a href="mailto:hello@andrewparks.io">hello[at]andrewparks[dot]io</a>
+      <br>
+      <center>
+        <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
+      </center>
     </p>
+    <br>
+    <br>
+    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <br>
+    <br>
     <div>
       <!--Social Media Layout and Placeholders-->
       <a href="https://www.linkedin.com/in/popmartmedia/" target="_blank">
