--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andrew Parks | Content Strategist</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
   <header>
-    <div>
-      <img src="https://via.placeholder.com/150x50/c7d9c9/000000?text=andrewparks.io" alt="Andrew Parks">
-      <nav>
+    <nav>
+      <div>
+        <a href="index.html">
+					<img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
+        </a>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
@@ -47,7 +55,7 @@
           <div>
             <!-- open second column (used for text) -->
             <center>
-              <h2><a href="moog.html">Moog x self-titled</a></h2>
+                <h2><a href="moog.html">Moog x self-titled</a></h2>
             </center><!-- heading for the project -->
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
@@ -63,7 +71,7 @@
           <div>
             <!-- open second column (used for text) -->
             <center>
-              <h2><a href="linecook.html">LineCook</a></h2>
+             <h2><a href="linecook.html">LineCook</a></h2>
             </center><!-- heading for the project -->
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
@@ -71,10 +79,15 @@
     </div>
   </main>
   <footer id="contact">
-    <h2>Care to Collaborate?</h2>
     <p>
-      Please get in touch by contacting <a href="mailto:hello@andrewparks.io">hello[at]andrewparks[dot]io</a>
+      <br>
+      <center><p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....</center>
     </p>
+    <br>
+    <br>
+        <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+        <br>
+        <br>
     <div>
       <!--Social Media Layout and Placeholders-->
       <a href="https://www.linkedin.com/in/popmartmedia/" target="_blank">
@@ -110,7 +123,7 @@
         </svg>
       </a>
       <a href="https://www.instagram.com/thereluctanttraveler/" target="_blank">
-        <svg id="Layer_1" style="enable-background:new 0 0 1000 1000;" version="1.1" viewBox="0 0 1000 1000" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg id="Layer_1" style="enable-background:new 0 0 50 50;" version="1.1" viewBox="0 0 50 50" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <style type="text/css">
             .st0 {
               fill: url(#SVGID_1_);
