cleaned up linecook project page

--- a/linecook.html
+++ b/linecook.html
@@ -3,15 +3,23 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andrew Parks | Content Strategist</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
   <header>
+<nav>
     <div>
-      <img src="https://via.placeholder.com/150x50/c7d9c9/000000?text=andrewparks.io" alt="Andrew Parks">
-      <nav>
+      <a href="index.html">
+        <img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
+      </a>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
@@ -22,38 +30,32 @@
   </header>
 
   <main>
-  <div>
     <div>
-      <h1>LineCook</h1>
-      </div>
-      </div>
       <div>
-        <div>
-          <picture>
-            <source srcset="img/linecook/linecook-project@1.jpg" media="(max-width:767px)">
-              <img src="img/linecook/linecook-project@2.jpg" alt="linecook project">
-              </picture>
-              </div>
-              </div>
-              <div>
-                <div>
-                  <h2><u>The Task At Hand</u></h2>
-                  <p><a href="https://xd.adobe.com/view/225c1841-b6ef-41ea-aa2b-0c1917617d4c-770f/?fullscreen">LineCook</a> is a mobile-ready web app that was created to solve a simple problem: home cooks not knowing who to tap for trusted, realtime advice in the kitchen.</p>
-                          </div>
-                          </div>
-                          <center><img src="img/linecook/linecook-chat.gif" alt="linecook chat"></center>
-                          <div>
-                            <div>
-                              <h2><u>The Results</u></h2>
-                              <p>The answer to said problem? On-call advice — 24 hours a day, 7 days a week — from experts within the food and beverage industry. Namely the chefs who need a reliable source of supplementary income during unexpected downtimes like the COVID-19 crisis. The Phone-a-Friend of the food industry, essentially; only in this case, the “friends” are from your favorite local restaurants.</p>
-                              </div>
-                              </div>
+        <img src="img/linecook/search-page-desktop.jpg" alt="linecook project">
+        <center><h2><u>The Task</u></h2></center>
+        <p><a href="https://xd.adobe.com/view/225c1841-b6ef-41ea-aa2b-0c1917617d4c-770f/?fullscreen">LineCook</a> is a mobile-ready web app that was created to solve a simple problem: home cooks not knowing who to tap for trusted, realtime advice in
+          the kitchen.</p>
+      </div>
+    </div>
+    <div>
+      <div>
+        <center><h2><u>The Results</u></h2></center>
+        <p>The answer to said problem? On-call advice — 24 hours a day, 7 days a week — from experts within the food and beverage industry. Namely the chefs who need a reliable source of supplementary income during unexpected downtimes like the
+          COVID-19 crisis. The Phone-a-Friend of the food industry, essentially; only in this case, the “friends” are from your favorite local restaurants.</p>
+      </div>
+    </div>
   </main>
   <footer id="contact">
-    <h2>Care to Collaborate?</h2>
     <p>
-      Please get in touch by contacting <a href="mailto:hello@andrewparks.io">hello[at]andrewparks[dot]io</a>
+      <br>
+      <center><p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....</center>
     </p>
+    <br>
+    <br>
+        <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+        <br>
+        <br>
     <div>
       <!--Social Media Layout and Placeholders-->
       <a href="https://www.linkedin.com/in/popmartmedia/" target="_blank">
