--- a/moog.html
+++ b/moog.html
@@ -3,15 +3,23 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andrew Parks | Content Strategist</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
   <header>
+<nav>
     <div>
-      <img src="https://via.placeholder.com/150x50/c7d9c9/000000?text=andrewparks.io" alt="Andrew Parks">
-      <nav>
+      <a href="index.html">
+        <img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
+      </a>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
@@ -22,41 +30,36 @@
   </header>
 
   <main>
-  <div>
-    <div>
-      <h1>Moog Music x self-titled</h1>
-      </div>
-      </div>
+    <img src="img/moog/moog-project@2.jpg" alt="moog project">
       <div>
-        <div>
-          <picture>
-            <source srcset="img/moog/moog-project@1.jpg" media="(max-width:767px)">
-              <img src="img/moog/moog-project@2.jpg" alt="moog project">
-              </picture>
-              </div>
-              </div>
-              <div>
-                <div>
-                  <h2><u>The Task At Hand</u></h2>
-                  <p>As part of a special electronic music package I spearheaded for <i><a
-                      href="https://self-titledmag.com" target="_blank">self-titled</a></i>, I oversaw an <a
-                          href="https://issuu.com/selftitled/docs/st_19_issuu/24" target="_blank">owned media campaign</a> featuring the major equipment brand Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).</p>
-                          </div>
-                          </div>
-                          <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-                          <div>
-                            <div>
-                              <h2><u>The Results</u></h2>
-                              <p>The project's <a href="https://soundcloud.com/selftitledmag/sets/moog-x-self-titled" target="_blank">free digital EP</a> generated more than 70,000 streams on SoundCloud and raised customer awareness of the company's new <a href="https://www.moogmusic.com/products/sub-phatty" target="_blank">Sub Phatty synth</a> in the months leading up to a subsequent <a href="https://www.youtube.com/watch?v=8mbvDCDk3yU&feature=youtu.be" target="_blank">campaign</a> featuring Adult Swim and Flying Lotus.</p>
-                              <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/7173054&color=%23ced4df&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                              </div>
-                              </div>
+        <center><h2><u>The Task</u></h2></center>
+        <p>As part of a special electronic music package I spearheaded for <i><a href="https://self-titledmag.com" target="_blank">self-titled</a></i>, I oversaw an <a href="https://issuu.com/selftitled/docs/st_19_issuu/24" target="_blank">owned
+            media campaign</a> featuring the major equipment brand Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).</p>
+      </div>
+    </div>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe></center>
+    <div>
+      <div>
+        <center><h2><u>The Results</u></h2></center>
+        <p>The project's <a href="https://soundcloud.com/selftitledmag/sets/moog-x-self-titled" target="_blank">free digital EP</a> generated more than 70,000 streams on SoundCloud and raised customer awareness of the company's new <a
+            href="https://www.moogmusic.com/products/sub-phatty" target="_blank">Sub Phatty synth</a> in the months leading up to a subsequent <a href="https://www.youtube.com/watch?v=8mbvDCDk3yU&feature=youtu.be" target="_blank">campaign</a>
+          featuring Adult Swim and Flying Lotus.</p>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/7173054&color=%23ced4df&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+      </div>
+    </div>
   </main>
   <footer id="contact">
-    <h2>Care to Collaborate?</h2>
     <p>
-      Please get in touch by contacting <a href="mailto:hello@andrewparks.io">hello[at]andrewparks[dot]io</a>
+      <br>
+      <center><p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....</center>
     </p>
+    <br>
+    <br>
+        <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+        <br>
+        <br>
     <div>
       <!--Social Media Layout and Placeholders-->
       <a href="https://www.linkedin.com/in/popmartmedia/" target="_blank">
