added section IDs

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
     </div>
   </header>
   <main>
+    <div id="hero"> 
         <div>
           <div>
     					<img src="https://bit.ly/3j3dECr" alt="bio photo">
