--- a/linecook.html
+++ b/linecook.html
@@ -30,6 +30,7 @@
   </header>
 
   <main>
+        <div id="hero"> 
     <div>
       <div>
         <img src="img/linecook/search-page-desktop.jpg" alt="linecook project">
