--- a/moog.html
+++ b/moog.html
@@ -30,6 +30,7 @@
   </header>
 
   <main>
+        <div id="hero"> 
     <img src="img/moog/moog-project@2.jpg" alt="moog project">
       <div>
         <center><h2><u>The Task</u></h2></center>
