--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Andrew Parks | Content Strategist</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -18,76 +18,79 @@
     <nav>
       <div>
         <a href="index.html">
-					<img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
+          <img id="logo" src="https://via.placeholder.com/150" alt="placeholder image">
         </a>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-      </nav>
+    </nav>
     </div>
   </header>
 
   <main>
-    <div>
+    <div id="hero">
       <div>
-        <h1>Andrew Parks is...
-          <span>a content strategist who took a recent detour into UX design.</span>
-        </h1>
-        <p>Over the past 18 years, he has worked for Apple, Rolling Stone, Entertainment Weekly, and eMusic; produced owned media projects for Marriott International, Red Bull, Christie’s, and Hennesy; and overseen an online music magazine
-          (self-titled) and local arts & culture outlet (Minnevangelist). He is currently leading a complete overhaul of Songtrust's in-house editorial and customer service copy.</p>
+        <div>
+          <h1>Andrew Parks is...
+            <span>a content strategist who took a recent detour into UX design.</span>
+          </h1>
+          <p>Over the past 18 years, he has worked for Apple, Rolling Stone, Entertainment Weekly, and eMusic; produced owned media projects for Marriott International, Red Bull, Christie’s, and Hennesy; and overseen an online music magazine
+            (self-titled) and local arts & culture outlet (Minnevangelist). He is currently leading a complete overhaul of Songtrust's in-house editorial and customer service copy.</p>
+        </div>
       </div>
-    </div>
 
-    <!-- For my work/projects -->
-    <div>
-      <div>
+      <div id="work">
         <div>
-          <!-- open row that holds (2) columns for project -->
           <div>
-            <!-- open first column (used for image) -->
-            <picture>
-              <source srcset="img/moog/moog@1.jpg" media="(max-width:767px)">
-              <img src="img/moog/moog@2.jpg" alt="moog campaign">
-            </picture>
-          </div><!-- end first column -->
-          <div>
-            <!-- open second column (used for text) -->
-            <center>
-                <h2><a href="moog.html">Moog x self-titled</a></h2>
-            </center><!-- heading for the project -->
-          </div><!-- end second column -->
-        </div><!-- end row that holds (2) columns for project -->
-        <div>
-          <!-- open row that holds (2) columns for project -->
-          <div>
-            <!-- open first column (used for image) -->
-            <picture>
-              <source srcset="img/linecook/linecook@1.jpg" media="(max-width:767px)">
-              <img src="img/linecook/linecook@2.jpg" alt="linecook">
-            </picture>
-          </div><!-- end first column -->
-          <div>
-            <!-- open second column (used for text) -->
-            <center>
-             <h2><a href="linecook.html">LineCook</a></h2>
-            </center><!-- heading for the project -->
-          </div><!-- end second column -->
-        </div><!-- end row that holds (2) columns for project -->
-      </div>
-    </div>
+            <div>
+              <!-- open row that holds (2) columns for project -->
+              <div>
+                <!-- open first column (used for image) -->
+                <picture>
+                  <source srcset="img/moog/moog@1.jpg" media="(max-width:767px)">
+                  <img src="img/moog/moog@2.jpg" alt="moog campaign">
+                </picture>
+              </div><!-- end first column -->
+              <div>
+                <!-- open second column (used for text) -->
+                <center>
+                  <h2><a href="moog.html">Moog x self-titled</a></h2>
+                </center><!-- heading for the project -->
+              </div><!-- end second column -->
+            </div><!-- end row that holds (2) columns for project -->
+            <div>
+              <!-- open row that holds (2) columns for project -->
+              <div>
+                <!-- open first column (used for image) -->
+                <picture>
+                  <source srcset="img/linecook/linecook@1.jpg" media="(max-width:767px)">
+                  <img src="img/linecook/linecook@2.jpg" alt="linecook">
+                </picture>
+              </div><!-- end first column -->
+              <div>
+                <!-- open second column (used for text) -->
+                <center>
+                  <h2><a href="linecook.html">LineCook</a></h2>
+                </center><!-- heading for the project -->
+              </div><!-- end second column -->
+            </div><!-- end row that holds (2) columns for project -->
+          </div>
+        </div>
   </main>
   <footer id="contact">
     <p>
       <br>
-      <center><p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....</center>
+      <center>
+        <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
+      </center>
     </p>
     <br>
     <br>
-        <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
-        <br>
-        <br>
+    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <br>
+    <br>
     <div>
       <!--Social Media Layout and Placeholders-->
       <a href="https://www.linkedin.com/in/popmartmedia/" target="_blank">
