cleaned up coding

--- a/linecook.html
+++ b/linecook.html
@@ -17,7 +17,7 @@
   <header>
       <div class="container">
         <a href="index.html">
-          <img id="logo" class="logo" src="https://previews.dropbox.com/p/thumb/ABQlyCQlhiSS9cfJB1wfmA21Vdssj_MTn0JK-L5sjoKlSakPtu-zgSol8KyywEqH3aIXoLiVtIp47FIzSI4XabOaUScIscGeU69n4Qpo7Mdoxg9SJbEMdhOQQHHxWyt6riFV-OjQrxEt55F5GSIDy6EjEcsCpyc-FE_yCo6IQNmVvDtNFp1lU9T8PG5PvxZSlEYtU5duwS5lzPDIPepg6_OFjq0MB89wuo7GCz6UXtpfOTSJRb2zUaitattqZp8yvWeF3IKw_NtozppVS1b4Yj41iBXwnKlPnpLpTPAqRmXa-rG6Rb_jzMWx3mXaLu2LmyfI5Jf8J15GjSTL7k1W_c_U6tmCGtZP3lTn2xWmmmNdkg/p.jpeg?fv_content=true&size_mode=5" alt="placeholder image">
+          <img id="logo" class="logo" src="img/logo.jpeg" alt="logo">
         </a>
         <nav>
         <ul>
@@ -34,14 +34,15 @@
 <div class="container">
       <div>
         <img src="img/linecook/search-page-desktop.jpg" alt="linecook project">
-        <center><h2><u>The Task</u></h2></center>
+        <h2><u>The Task</u></h2>
         <p><a href="https://xd.adobe.com/view/225c1841-b6ef-41ea-aa2b-0c1917617d4c-770f/?fullscreen">LineCook</a> is a mobile-ready web app that was created to solve a simple problem: home cooks not knowing who to tap for trusted, realtime advice in
           the kitchen.</p>
       </div>
     </div>
+  </div>
     <div>
       <div class="container">
-        <center><h2><u>The Results</u></h2></center>
+        <h2><u>The Results</u></h2>
         <p>The answer to said problem? On-call advice — 24 hours a day, 7 days a week — from experts within the food and beverage industry. Namely the chefs who need a reliable source of supplementary income during unexpected downtimes like the
           COVID-19 crisis. The Phone-a-Friend of the food industry, essentially; only in this case, the “friends” are from your favorite local restaurants.</p>
       </div>
@@ -50,12 +51,10 @@
   <footer id="contact">
     <p>
       <br>
-      <center>
         <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
-      </center>
     </p>
     <br>
-    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a>
     <br>
     <br>
     <div>
@@ -65,8 +64,6 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
               d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
-          </svg>
-          </g>
           </svg>
         </a>
         <a href="https://twitter.com/popmartmedia" target="_blank">
