--- a/moog.html
+++ b/moog.html
@@ -17,7 +17,7 @@
   <header>
       <div class="container">
         <a href="index.html">
-          <img id="logo" class="logo" src="https://previews.dropbox.com/p/thumb/ABQlyCQlhiSS9cfJB1wfmA21Vdssj_MTn0JK-L5sjoKlSakPtu-zgSol8KyywEqH3aIXoLiVtIp47FIzSI4XabOaUScIscGeU69n4Qpo7Mdoxg9SJbEMdhOQQHHxWyt6riFV-OjQrxEt55F5GSIDy6EjEcsCpyc-FE_yCo6IQNmVvDtNFp1lU9T8PG5PvxZSlEYtU5duwS5lzPDIPepg6_OFjq0MB89wuo7GCz6UXtpfOTSJRb2zUaitattqZp8yvWeF3IKw_NtozppVS1b4Yj41iBXwnKlPnpLpTPAqRmXa-rG6Rb_jzMWx3mXaLu2LmyfI5Jf8J15GjSTL7k1W_c_U6tmCGtZP3lTn2xWmmmNdkg/p.jpeg?fv_content=true&size_mode=5" alt="placeholder image">
+          <img id="logo" class="logo" src="img/logo.jpeg" alt="logo">
         </a>
         <nav>
         <ul>
@@ -33,16 +33,16 @@
     <div class="container">
         <div id="hero">
     <img src="img/moog/moog-project@2.jpg" alt="moog project">
-        <center><h2><u>The Task</u></h2></center>
+        <h2><u>The Task</u></h2>
         <p>As part of a special electronic music package I spearheaded for <i><a href="https://self-titledmag.com" target="_blank">self-titled</a></i>, I oversaw an <a href="https://issuu.com/selftitled/docs/st_19_issuu/24" target="_blank">owned
             media campaign</a> featuring the major equipment brand Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).</p>
       </div>
     </div>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe></center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <div class="container">
       <div>
-        <center><h2><u>The Results</u></h2></center>
+        <h2><u>The Results</u></h2>
         <p>The project's <a href="https://soundcloud.com/selftitledmag/sets/moog-x-self-titled" target="_blank">free digital EP</a> generated more than 70,000 streams on SoundCloud and raised customer awareness of the company's new <a
             href="https://www.moogmusic.com/products/sub-phatty" target="_blank">Sub Phatty synth</a> in the months leading up to a subsequent <a href="https://www.youtube.com/watch?v=8mbvDCDk3yU&feature=youtu.be" target="_blank">campaign</a>
           featuring Adult Swim and Flying Lotus.</p>
@@ -54,12 +54,12 @@
   <footer id="contact">
     <p>
       <br>
-      <center>
+
         <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
-      </center>
+
     </p>
     <br>
-    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a>
     <br>
     <br>
     <div>
@@ -69,8 +69,6 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
               d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
-          </svg>
-          </g>
           </svg>
         </a>
         <a href="https://twitter.com/popmartmedia" target="_blank">
