--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
       <div class="container">
         <a href="index.html">
-          <img id="logo" class="logo" src="https://previews.dropbox.com/p/thumb/ABQlyCQlhiSS9cfJB1wfmA21Vdssj_MTn0JK-L5sjoKlSakPtu-zgSol8KyywEqH3aIXoLiVtIp47FIzSI4XabOaUScIscGeU69n4Qpo7Mdoxg9SJbEMdhOQQHHxWyt6riFV-OjQrxEt55F5GSIDy6EjEcsCpyc-FE_yCo6IQNmVvDtNFp1lU9T8PG5PvxZSlEYtU5duwS5lzPDIPepg6_OFjq0MB89wuo7GCz6UXtpfOTSJRb2zUaitattqZp8yvWeF3IKw_NtozppVS1b4Yj41iBXwnKlPnpLpTPAqRmXa-rG6Rb_jzMWx3mXaLu2LmyfI5Jf8J15GjSTL7k1W_c_U6tmCGtZP3lTn2xWmmmNdkg/p.jpeg?fv_content=true&size_mode=5" alt="placeholder image">
+          <img id="logo" class="logo" src="img/logo.jpeg" alt="logo">
         </a>
         <nav>
         <ul>
@@ -42,7 +42,7 @@
 
       <div id="work">
       <div class="container">
-        <center><h2>My Work</h2></center>
+        <h2>My Work</h2>
         <div class="row"><!-- open row that holds (2) columns for project -->
               <div><!-- open first column (used for image) -->
                 <picture>
@@ -51,9 +51,9 @@
                 </picture>
               </div><!-- end first column -->
               <div><!-- open second column (used for text) -->
-                <center><h3>Moog x self-titled</h3></center><!-- heading for the project -->
+                <h3>Moog x self-titled</h3><!-- heading for the project -->
 <p>As part of self-titled's electronic music issue, I spearheaded a special advertorial package featuring new Moog gear and exclusive tracks by Laurel Halo, Brenmar, and Gavilán Rayna Russom.</p>
-                <center><a href="moog.html" class="button contact">Read More</a></center>
+                <a href="moog.html" class="button contact">Read More</a>
               </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
 
@@ -66,9 +66,9 @@
               </div><!-- end first column -->
               <div>
                 <!-- open second column (used for text) -->
-  <center><h3>LineCook</h3></center>
+  <h3>LineCook</h3>
               <p>While taking CareerFoundry's UX Immersion course, I designed, tested, and refined a mobile-first app that connects home cooks with specialized experts within the restaurant industry.</p>
-                <center><a href="linecook.html" class="button contact">Read More</a></center><!-- heading for the project -->
+                <a href="linecook.html" class="button contact">Read More</a><!-- heading for the project -->
               </div><!-- end second column -->
             </div><!-- end row that holds (2) columns for project -->
           </div>
@@ -78,12 +78,12 @@
     <div class="container">
     <p>
       <br>
-      <center>
+
         <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
-      </center>
+
     </p>
     <br>
-    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a>
     <br>
     <br>
     <div>
@@ -93,8 +93,6 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
               d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
-          </svg>
-          </g>
           </svg>
         </a>
         <a href="https://twitter.com/popmartmedia" target="_blank">
@@ -117,6 +115,7 @@
       </div>
       <p>© 2021 Andrew Parks</p>
     </div>
+  </div>
   </footer>
 </body>
 
