--- a/about.html
+++ b/about.html
@@ -15,23 +15,26 @@
 <body>
 
   <header>
-      <div class="container">
-        <a href="index.html">
-          <img id="logo" class="logo" src="https://previews.dropbox.com/p/thumb/ABQlyCQlhiSS9cfJB1wfmA21Vdssj_MTn0JK-L5sjoKlSakPtu-zgSol8KyywEqH3aIXoLiVtIp47FIzSI4XabOaUScIscGeU69n4Qpo7Mdoxg9SJbEMdhOQQHHxWyt6riFV-OjQrxEt55F5GSIDy6EjEcsCpyc-FE_yCo6IQNmVvDtNFp1lU9T8PG5PvxZSlEYtU5duwS5lzPDIPepg6_OFjq0MB89wuo7GCz6UXtpfOTSJRb2zUaitattqZp8yvWeF3IKw_NtozppVS1b4Yj41iBXwnKlPnpLpTPAqRmXa-rG6Rb_jzMWx3mXaLu2LmyfI5Jf8J15GjSTL7k1W_c_U6tmCGtZP3lTn2xWmmmNdkg/p.jpeg?fv_content=true&size_mode=5" alt="placeholder image">
-        </a>
-        <nav>
+    <div class="container">
+      <a href="index.html">
+        <img id="logo" class="logo"
+          src="img/logo.jpeg"
+          alt="logo">
+      </a>
+      <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+      </nav>
     </div>
   </header>
 
   <main>
     <div id="hero">
       <div class="container">
+        <div class="row">
         <div>
           <img src="https://bit.ly/3j3dECr" alt="bio photo">
           <br>
@@ -49,9 +52,9 @@
             important (maybe even more so) are the people who actually consume it.</p>
           <a href="files/resume.pdf" target="_blank">Download my resume</a>
         </div>
-<div>
+        <div>
           <h2>Skills & Tools</h2>
-          <div>
+          <div class="row">
             <div>
               <h3>Relevant Skills</h3>
               <ul>
@@ -87,12 +90,12 @@
   <footer id="contact">
     <p>
       <br>
-      <center>
+
         <p style="font-family:roboto; font-size:20px; font-weight: 400">Care to collaborate? Push the button and....
-      </center>
+
     </p>
     <br>
-    <center><a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a></center>
+    <a href="mailto:hello@andrewparls.io" class="button contact">Say Hello</a>
     <br>
     <br>
     <div>
@@ -102,8 +105,6 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path
               d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z" />
-          </svg>
-          </g>
           </svg>
         </a>
         <a href="https://twitter.com/popmartmedia" target="_blank">
