--- a/linecook.html
+++ b/linecook.html
@@ -34,7 +34,7 @@
 <div class="container">
       <div>
         <img src="img/linecook/search-page-desktop.jpg" alt="linecook project">
-        <center><h2><u>The Task</u></h2></center>
+        <h2><u>The Task</u></h2>
         <p><a href="https://xd.adobe.com/view/225c1841-b6ef-41ea-aa2b-0c1917617d4c-770f/?fullscreen">LineCook</a> is a mobile-ready web app that was created to solve a simple problem: home cooks not knowing who to tap for trusted, realtime advice in
           the kitchen.</p>
       </div>
@@ -42,7 +42,7 @@
   </div>
     <div>
       <div class="container">
-        <center><h2><u>The Results</u></h2></center>
+        <h2><u>The Results</u></h2>
         <p>The answer to said problem? On-call advice — 24 hours a day, 7 days a week — from experts within the food and beverage industry. Namely the chefs who need a reliable source of supplementary income during unexpected downtimes like the
           COVID-19 crisis. The Phone-a-Friend of the food industry, essentially; only in this case, the “friends” are from your favorite local restaurants.</p>
       </div>
