--- a/moog.html
+++ b/moog.html
@@ -33,16 +33,16 @@
     <div class="container">
         <div id="hero">
     <img src="img/moog/moog-project@2.jpg" alt="moog project">
-        <center><h2><u>The Task</u></h2></center>
+        <h2><u>The Task</u></h2>
         <p>As part of a special electronic music package I spearheaded for <i><a href="https://self-titledmag.com" target="_blank">self-titled</a></i>, I oversaw an <a href="https://issuu.com/selftitled/docs/st_19_issuu/24" target="_blank">owned
             media campaign</a> featuring the major equipment brand Moog Music and three underground producers (Gavin Rayna Russom, Laurel Halo, Brenmar).</p>
       </div>
     </div>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe></center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8mbvDCDk3yU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <div class="container">
       <div>
-        <center><h2><u>The Results</u></h2></center>
+        <h2><u>The Results</u></h2>
         <p>The project's <a href="https://soundcloud.com/selftitledmag/sets/moog-x-self-titled" target="_blank">free digital EP</a> generated more than 70,000 streams on SoundCloud and raised customer awareness of the company's new <a
             href="https://www.moogmusic.com/products/sub-phatty" target="_blank">Sub Phatty synth</a> in the months leading up to a subsequent <a href="https://www.youtube.com/watch?v=8mbvDCDk3yU&feature=youtu.be" target="_blank">campaign</a>
           featuring Adult Swim and Flying Lotus.</p>
